--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-<img class="sfu-img" src="/_images/sfu.png">
+<img class="sfu-img" src="{{ site.baseurl }}/_images/sfu.png">
   <div class="wrapper">
 
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
