lectures and blog post

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,5 +3,6 @@
     <li><a class="page-link" href="{{site.baseurl}}/schedule/"><i class="fas fa-book-reader"></i> Schedule</a></li>
     <li><a class="page-link" href="{{site.baseurl}}/assignments/"><i class="fas fa-pencil-ruler"></i> Assignments</a></li>
     <li><a class="page-link" href="{{site.baseurl}}/project/"><i class="fas fa-hammer"></i> Project</a></li>
+    <li><a class="page-link" href="{{site.baseurl}}/post/"><i class="fas fa-newspaper"></i> Blog Post</a></li>
     <!--<li><a class="page-link" href="/resources/"><i class="fas fa-book"></i> Resources</a></li>-->
 </ul>
