--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -257,6 +257,31 @@ tr:nth-child(odd) {
 }
 
 .alert {
-  color: #ff0000;
+   color: #ff0000;
   font-weight: bold;
+}
+
+.alert-notify {
+  padding: 20px;
+  background-color: #6495ED; /* Red */
+  font-size: large;
+  color: black;
+  margin-bottom: 15px;
+}
+
+/* The close button */
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+/* When moving the mouse over the close button */
+.closebtn:hover {
+  color: black;
 }
