--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,30 @@
 <ul class="menu">
-    <li><a class="page-link" href="{{site.baseurl}}/syllabus"><i class="fa fa-list-ul fa-lg"></i> Syllabus</a></li>
-    <li><a class="page-link" href="{{site.baseurl}}/schedule/"><i class="fas fa-book-reader"></i> Schedule</a></li>
-    <li><a class="page-link" href="{{site.baseurl}}/assignments/"><i class="fas fa-pencil-ruler"></i> Assignments</a></li>
-    <li><a class="page-link" href="{{site.baseurl}}/project/"><i class="fas fa-hammer"></i> Project</a></li>
-    <li><a class="page-link" href="{{site.baseurl}}/post/"><i class="fas fa-newspaper"></i> Blog Post</a></li>
+    <li>
+        <a class="page-link" href="{{site.baseurl}}/syllabus"><i class="fa fa-list-ul fa-lg"></i> Syllabus</a>
+    </li>
+
+    <li>
+        <a class="page-link" href="{{site.baseurl}}/schedule/"><i class="fas fa-book-reader"></i> Schedule</a>
+    </li>
+
+    <li>
+        <a class="page-link" href="{{site.baseurl}}/assignments/"><i class="fas fa-pencil-ruler"></i> Assignments</a>
+    </li>
+
+    <li>
+        <a class="page-link" href="{{site.baseurl}}/project/"><i class="fas fa-hammer"></i> Project</a>
+        <ul class="sub-menu">
+      <li>
+        <a href="{{site.baseurl}}/project/milestone">Milestone Presentations</a>
+      </li>
+      <li>
+        <a href="">Project Showcase</a>
+      </li>
+    </ul>
+    </li>
+
+    <li>
+        <a class="page-link" href="{{site.baseurl}}/post/"><i class="fas fa-newspaper"></i> Blog Post</a>
+    </li>
     <!--<li><a class="page-link" href="/resources/"><i class="fas fa-book"></i> Resources</a></li>-->
 </ul>
