--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,7 +18,7 @@
         <a href="{{site.baseurl}}/project/milestone">Milestone Presentations</a>
       </li>
       <li>
-        <a href="">Project Showcase</a>
+        <a href="{{site.baseurl}}/project/showcase">Project Showcase</a>
       </li>
     </ul>
     </li>
